--- a/index.html
+++ b/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>My first program</title>
 
-    </head>
-    <body>
-        <h1>Hello world</h1>
-    </body>
+<head>
+    <title>My first program</title>
+
+</head>
+
+<body>
+    <style>
+        body {
+            background-color: rgb(185, 185, 196);
+            text-align: center;
+            font-family: Georgia, 'Times New Roman', Times, serif;
+            color: black;
+        }
+    </style>
+    <h1>Danke</h1>
+    <img src="bg.jpg" width="600px" height="auto">
+    <p> Vielen Dank agentur für arbeit
+    </p>
+</body>
+
 </html>
